--- a/style.css
+++ b/style.css
@@ -1,13 +1,137 @@
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+
+body {
+	height: 100vh;
+	overflow: hidden;
+	background-color: #000;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+h1 {
+	color: green;
+	font-family: 'Share Tech Mono', 'Cascadia Code', Menlo, Monaco, 'Courier New', monospace;
+	font-size: 6rem;
+	filter: drop-shadow(0px 0px 5px currentColor);
+	
+	&::after {
+		content: '';
+		display: inline-block;
+		width: .2em;
+		height: .7em;
+		background-color: currentColor;
+		margin-left: .1em;
+		animation: blink 1s linear infinite forwards;
+		vertical-align: baseline;
+	}
+}
+
+.grid-container {
+	--grid: 10rem;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	transform-style: preserve-3d;
+	perspective: 100rem;
+	animation: rotate 100s linear infinite forwards;
+	
+	.plane {
+		--dir: 1;
+		width: 300%;
+		height: 150%;
+		min-height: 70rem;
+		position: absolute;
+		bottom: 0;
+		transform-style: preserve-3d;
+		transform-origin: bottom center;
+		transform: translateX(-50%) rotateX(85deg);
+		
+		&:last-child {
+			--dir: -1;
+			top: 0;
+			transform-origin: top center;
+			transform: translateX(-50%) rotateX(-85deg);
+			
+			& > * {
+				&::after {
+					background-image: linear-gradient(to top, rgba(0, 0, 0, 255) var(--grid), rgba(0, 0, 0, 0));
+				}
+			}
+		}
+		
+		& > * {
+			transform-style: preserve-3d;
+			height: 100%;
+			width: 100%;
+			position: absolute;
+			
+			&::before, &::after {
+				content: '';
+				display: block;
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				top: 0;
+				left: 0;
+			}
+
+			&::before {
+				background-image: repeating-linear-gradient(to left, green, green 4px, transparent 4px, transparent var(--grid)), 
+					repeating-linear-gradient(to bottom, green, green 4px, transparent 4px, transparent var(--grid));
+				animation: move 1s linear infinite forwards;
+			}
+
+			&::after {
+				background-image: linear-gradient(to bottom, rgba(0, 0, 0, 255) var(--grid), rgba(0, 0, 0, 0));
+				z-index: 1;
+				transform: translateZ(1px);
+			}
+		}
+		
+		.glow {
+			filter: blur(1rem);
+			z-index: 1;
+			mix-blend-mode: plus-lighter;
+		}
+	}
+}
+
+@keyframes move {
+	from {
+		transform: translateY(0px);
+	}
+	
+	to {
+		transform: translateY(calc(var(--grid) * var(--dir)));
+	}
+}
+
+@keyframes blink {
+	0% {
+		visibility: visible;
+	}
+	
+	50% {
+		visibility: visible;
+	}
+	
+	51% {
+		visibility: hidden;
+	}
+	
+	100% {
+		visibility: hidden;
+	}
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-body {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  background-color: #0a0a23;
-  color: #ffffff;
+  font-family: 'Share Tech Mono', 'Cascadia Code', Menlo, Monaco, 'Courier New', monospace;
 }
 
 .container {
@@ -18,11 +142,6 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-}
-
-.freecodecamp-logo {
-  height: 30px;
-  margin-bottom: 20px;
 }
 
 .title {
@@ -37,6 +156,7 @@ body {
   min-height: 100px;
   border-radius: 20px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
@@ -57,8 +177,8 @@ label {
   padding: 10px;
   border-radius: 15px;
   background-color: #5a01a7;
-  color: #fff;
-  cursor: pointer; */
+  color: #fff; */
+  cursor: pointer;
   width: 220px;
   height: 50px;
   border: none;
@@ -147,6 +267,7 @@ label {
   word-wrap: break-word;
   min-height: 50px;
   color: black;
+  text-align: center;
 }
 
 .hidden {
@@ -169,5 +290,6 @@ label {
 .palindrome-definition {
   vertical-align: middle;
   text-align: center;
+  color: white;
 }
 
